--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,80 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.main {
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(149, 178, 233);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: row;
 }
 
-.App-link {
-  color: #61dafb;
+.middle {
+  height: 80vh;
+  width: 30vw;
+  border-radius: 20px;
+  color: aliceblue;
+  box-shadow: 1px 1px 1px 1px grey;
+  background-color: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.tag {
+  margin: 15px 0px 15px 0px;
+  padding: 15px;
+  text-align: center;
+  background-color: rgb(176, 115, 218);
+  font-size: 26x;
+  font-weight: 600;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.input {
+  text-align: center;
+  align-items: center;
+  margin-left: 53px;
+  margin-top: 15px;
+  height: 30px;
+  top: 25px;
+  border: none;
+  background: transparent;
+  font-size: 20px;
+  font-weight: 600;
+  border-bottom: 2px solid #8566aa;
+  outline: none;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.button {
+  border-radius: 50px;
+  background-color: #8566aa;
+  color: aliceblue;
+  margin-left: 10px;
+  border: none;
+  outline: none;
+  font-size: 28px;
+  font-weight: 600;
+  height: 40px;
+  width: 40px;
+}
+
+.button:hover {
+  background-color: rgb(0, 255, 0);
+  cursor: pointer;
+}
+
+.ol {
+  margin-top: 20px;
+}
+
+ol li {
+  padding-left: 13px;
+  margin-top: 20px;
+  text-align: left;
+  font-size: 20px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  text-transform: capitalize;
+  color: rgb(88, 88, 88);
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
