--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .main {
   width: 100vw;
   height: 100vh;
-  background-color: rgb(149, 178, 233);
+  background-color: rgb(105, 148, 163);
+  /* background-color: rgb(245, 139, 183); */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,17 +14,18 @@
   width: 30vw;
   border-radius: 20px;
   color: aliceblue;
-  box-shadow: 1px 1px 1px 1px grey;
   background-color: aliceblue;
+  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
 }
 
 .tag {
   margin: 15px 0px 15px 0px;
   padding: 15px;
   text-align: center;
-  background-color: rgb(176, 115, 218);
-  font-size: 26x;
-  font-weight: 600;
+  background-color: rgb(140, 94, 172);
+  font-size: 35px;
+  /* font-weight: 600; */
+  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -32,6 +34,7 @@
   align-items: center;
   margin-left: 53px;
   margin-top: 15px;
+  margin-bottom: 20px;
   height: 30px;
   top: 25px;
   border: none;
@@ -40,6 +43,7 @@
   font-weight: 600;
   border-bottom: 2px solid #8566aa;
   outline: none;
+  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -54,6 +58,7 @@
   font-weight: 600;
   height: 40px;
   width: 40px;
+  box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
 }
 
 .button:hover {
@@ -67,7 +72,6 @@
 
 ol li {
   padding-left: 13px;
-  margin-top: 20px;
   text-align: left;
   font-size: 20px;
   font-weight: 600;
