--- a/src/App.css
+++ b/src/App.css
@@ -10,10 +10,12 @@
 }
 
 .middle {
+  display: flex;
+  flex-direction: column;
   height: 80vh;
-  width: 30vw;
   border-radius: 20px;
   color: aliceblue;
+  overflow: hidden;
   background-color: aliceblue;
   box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
 }
@@ -29,10 +31,15 @@
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+.input-group {
+  display: flex;
+  align-items: center;
+  padding: 0 20px;
+}
+
 .input {
   text-align: center;
   align-items: center;
-  margin-left: 53px;
   margin-top: 15px;
   margin-bottom: 20px;
   height: 30px;
@@ -61,9 +68,20 @@
   box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
 }
 
-.button:hover {
+.button:not([disabled]):hover {
   background-color: rgb(0, 255, 0);
   cursor: pointer;
+}
+
+.disabled {
+  cursor: not-allowed;
+}
+
+
+.list-con {
+  /* background-color: aquamarine; */
+  overflow-y: auto;
+
 }
 
 .ol {
