--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 .middle {
   display: flex;
   flex-direction: column;
+  align-items: center;
   height: 80vh;
   border-radius: 20px;
   color: aliceblue;
@@ -26,6 +27,7 @@
   text-align: center;
   background-color: rgb(140, 94, 172);
   font-size: 35px;
+  width: 100%;
   /* font-weight: 600; */
   box-shadow: 5px 5px 5px -4px rgba(0, 0, 0, 0.3);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -81,15 +83,16 @@
 .list-con {
   /* background-color: aquamarine; */
   overflow-y: auto;
+  width: 100%;
 
 }
 
-.ol {
+ol {
   margin-top: 20px;
+  padding-left: 0;
 }
 
 ol li {
-  padding-left: 13px;
   text-align: left;
   font-size: 20px;
   font-weight: 600;
@@ -98,5 +101,4 @@ ol li {
   text-transform: capitalize;
   color: rgb(88, 88, 88);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-
 }
