--- a/src/Demo.css
+++ b/src/Demo.css
@@ -1,10 +1,10 @@
 .demo-main {
     display: flex;
-    justify-content: left;
+    justify-content: space-between;
     flex-direction: row;
     align-items: center;
     margin: 0;
-    padding-bottom: 20px;
+    padding: 5px 50px 20px 50px;
 }
 
 .trash {
